<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    tools:context="com.example.jimmykudo.singlescreenapp.MainActivity">

    <ImageView
        android:src="@drawable/dominos_pizza"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/info_ic"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/description"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/location_blue"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/address"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@android:drawable/sym_action_call"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/phone"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/time_ic"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/hours_of_work"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/email_ic"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/email"
                    android:autoLink="email"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
